# htmxology.rs

./: .prettierrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bacon.toml  deny.toml  justfile
.claude/: settings.local.json
design/: app_routes.md  (+3 more)
htmx-ssr/: Cargo.toml
htmx-ssr-macros/: Cargo.toml
htmx-ssr-macros/src/: controller.rs  fragment.rs  lib.rs  route.rs
htmx-ssr/src/: controller.rs  lib.rs  route.rs  state.rs
htmx-ssr/src/server/: mod.rs  state.rs
htmxology/: Cargo.toml  README.md  askama.toml
htmxology-macros/: Cargo.toml  README.md
htmxology-macros/src/: components_controller.rs  display_delegate.rs  fragment.rs  lib.rs  route.rs  utils.rs
htmxology-macros/src/components_controller/: mod.rs
htmxology-macros/src/components_controller/snapshots/: htmxology_macros__components_controller__snapshot_tests__complex_app.snap  htmxology_macros__components_controller__snapshot_tests__component_with_convert.snap  htmxology_macros__components_controller__snapshot_tests__component_with_doc.snap  htmxology_macros__components_controller__snapshot_tests__multiple_components.snap  htmxology_macros__components_controller__snapshot_tests__single_component_catch_all.snap  htmxology_macros__components_controller__snapshot_tests__single_component_with_path.snap
htmxology-macros/src/display_delegate/: mod.rs
htmxology-macros/src/display_delegate/snapshots/: htmxology_macros__display_delegate__snapshot_tests__many_variants.snap  htmxology_macros__display_delegate__snapshot_tests__simple_enum.snap
htmxology-macros/src/fragment/: mod.rs
htmxology-macros/src/fragment/snapshots/: htmxology_macros__fragment__snapshot_tests__before_end_strategy.snap  htmxology_macros__fragment__snapshot_tests__custom_strategy.snap  htmxology_macros__fragment__snapshot_tests__default_strategy.snap  htmxology_macros__fragment__snapshot_tests__generic_with_bounds_and_default.snap  htmxology_macros__fragment__snapshot_tests__generic_with_default.snap  htmxology_macros__fragment__snapshot_tests__inner_html_strategy.snap  htmxology_macros__fragment__snapshot_tests__multiple_generics_with_defaults.snap  htmxology_macros__fragment__snapshot_tests__outer_html_strategy.snap  htmxology_macros__fragment__snapshot_tests__snake_case_strategy.snap
htmxology-macros/src/identity/: mod.rs
htmxology-macros/src/identity/snapshots/: htmxology_macros__identity__snapshot_tests__generic_with_bounds_and_default.snap  htmxology_macros__identity__snapshot_tests__generic_with_default.snap  htmxology_macros__identity__snapshot_tests__mixed_lifetime_and_generic_with_default.snap  htmxology_macros__identity__snapshot_tests__multiple_generics_with_defaults.snap  htmxology_macros__identity__snapshot_tests__simple_struct.snap  htmxology_macros__identity__snapshot_tests__struct_with_fields.snap  htmxology_macros__identity__snapshot_tests__struct_with_generic.snap  htmxology_macros__identity__snapshot_tests__struct_with_lifetime.snap
htmxology-macros/src/named/: mod.rs
htmxology-macros/src/named/snapshots/: htmxology_macros__named__snapshot_tests__generic_with_bounds_and_default.snap  htmxology_macros__named__snapshot_tests__generic_with_default.snap  htmxology_macros__named__snapshot_tests__multiple_generics_with_defaults.snap  htmxology_macros__named__snapshot_tests__simple_struct.snap  htmxology_macros__named__snapshot_tests__struct_with_fields.snap  htmxology_macros__named__snapshot_tests__struct_with_generic.snap
htmxology-macros/src/route/: codegen.rs  config.rs  mod.rs  route_info.rs  route_type.rs  route_url.rs
htmxology-macros/src/route/snapshots/: htmxology_macros__route__snapshot_tests__catch_all.snap  htmxology_macros__route__snapshot_tests__full_application.snap  htmxology_macros__route__snapshot_tests__named_body_param.snap  htmxology_macros__route__snapshot_tests__named_multiple_path_params.snap  htmxology_macros__route__snapshot_tests__named_path_and_query.snap  htmxology_macros__route__snapshot_tests__named_query_param.snap  htmxology_macros__route__snapshot_tests__named_single_path_param.snap  htmxology_macros__route__snapshot_tests__named_subroute.snap  htmxology_macros__route__snapshot_tests__named_subroute_with_path.snap  htmxology_macros__route__snapshot_tests__query_and_body_params.snap  htmxology_macros__route__snapshot_tests__query_param_with_vec.snap  htmxology_macros__route__snapshot_tests__unit_variant_get.snap  htmxology_macros__route__snapshot_tests__unit_variant_post.snap  htmxology_macros__route__snapshot_tests__unnamed_body_param.snap  htmxology_macros__route__snapshot_tests__unnamed_multiple_path_params.snap  htmxology_macros__route__snapshot_tests__unnamed_query_param.snap  htmxology_macros__route__snapshot_tests__unnamed_single_path_param.snap  htmxology_macros__route__snapshot_tests__unnamed_subroute.snap
htmxology-macros/src/routing_controller/: mod.rs
htmxology-macros/src/routing_controller/snapshots/: htmxology_macros__components_controller__snapshot_tests__catch_all_with_params.snap  htmxology_macros__components_controller__snapshot_tests__component_with_convert.snap  (+26 more)
htmxology-macros/src/snapshots/: htmxology_macros__components_controller__snapshot_tests__component_with_doc.snap  htmxology_macros__components_controller__snapshot_tests__component_with_lifetime.snap  htmxology_macros__components_controller__snapshot_tests__single_component_catch_all.snap  htmxology_macros__display_delegate__snapshot_tests__enum_with_generic.snap  htmxology_macros__display_delegate__snapshot_tests__enum_with_lifetime.snap  htmxology_macros__display_delegate__snapshot_tests__enum_with_where_clause.snap
htmxology/src/: controller.rs  lib.rs  route.rs  state.rs
htmxology/src/caching/: controller.rs  mod.rs
htmxology/src/htmx/: mod.rs
htmxology/src/route/: de.rs  error.rs  mod.rs
htmxology/src/server/: auto_reload.rs  controller_router.rs  mod.rs  options.rs
htmxology/src/templating/: mod.rs
htmxology/src/web_components/: mod.rs
htmxology/tests/: from_str_roundtrip.rs  from_str_subroutes.rs  query_params.rs  query_params_from_request.rs
(+32 files in other folders)
