[workspace]
members = ["htmxology", "htmxology-macros"]
#default-members = ["htmxology"]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2024"
authors = ["Julien Kauffmann"]
repository = "https://github.com/ereOn/htmxology.rs"
license-file = "LICENSE-MIT"

[workspace.dependencies]
htmxology = { path = "./htmxology" }
htmxology-macros = { path = "./htmxology-macros", version = "0.9.0" }

anyhow = "1"
askama = { version = "0.14" }
axum = { version = "0.8", features = ["tokio"]}
axum-extra = { version = "0.10", features = ["form"] }
convert_case = "0.8"
itertools = "0.14"
listenfd = "1"
hex = "0.4"
http = "1"
md-5 = "0.10"
netdev = "0.34"
proc-macro2 = "1"
quote = "1"
percent-encoding = "2"
regex = "1"
serde = { version ="1", features = ["derive"] }
serde_urlencoded = "0.7"
syn = { version = "2", features = ["full"] }
thiserror = "2"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
uuid = { version = "1", features = ["v4"] }
