[package]
name = "htmx-ssr"
description = "HTMX server-side rendering framework for Rust, based on Axum."
version = "0.1.0"
edition = "2021"
authors = ["Julien Kauffmann"]
repository = "https://github.com/ereOn/htmx-ssr.rs"
license-file = "LICENSE"
keywords = ["htmx", "ssr", "web", "html", "axum"]
categories = ["web-programming"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
full = ["auto-reload", "interfaces"]
auto-reload = ["dep:listenfd", "tokio/net"]
interfaces = ["dep:netdev"]
examples = ["tokio/full", "dep:tracing-subscriber", "dep:anyhow"]

[lib]
name = "htmx_ssr"

[[example]]
name = "full"
path = "../examples/full.rs"
required-features = ["auto-reload", "interfaces", "examples"]

[dependencies]
anyhow = { workspace = true, optional = true }
axum.workspace = true
listenfd = { workspace = true, optional = true }
http.workspace = true
netdev = { workspace = true, optional = true }
thiserror = "1"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
