[package]
name = "htmx-ssr"
description = "HTMX server-side rendering framework for Rust, based on Axum."
version = "0.1.0"
edition = "2021"
authors = ["Julien Kauffmann"]
repository = "https://github.com/ereOn/htmx-ssr.rs"
license-file = "LICENSE"
keywords = ["htmx", "ssr", "web", "html", "axum"]
categories = ["web-programming"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
full = ["auto-reload", "interfaces", "ws", "derive"]
auto-reload = ["dep:listenfd", "tokio/net"]
interfaces = ["dep:netdev"]
ws = ["axum/ws", "dep:uuid"]
derive = ["dep:htmx-ssr-macros", "dep:urlencoding"]
examples = ["tokio/full", "dep:tracing-subscriber", "dep:anyhow", "axum/macros", "dep:askama"]

[lib]
name = "htmx_ssr"

[[example]]
name = "full"
path = "../examples/full.rs"
required-features = ["auto-reload", "interfaces", "examples"]

[[example]]
name = "blocks"
path = "../examples/blocks.rs"
required-features = ["auto-reload", "interfaces", "examples"]

[dependencies]
htmx-ssr-macros = { workspace = true, optional = true }

anyhow = { workspace = true, optional = true }
axum.workspace = true
askama = { workspace = true, optional = true }
askama_axum = { workspace = true, optional = true }
listenfd = { workspace = true, optional = true }
http.workspace = true
netdev = { workspace = true, optional = true }
serde.workspace = true
thiserror = "1"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
urlencoding = { workspace = true, optional = true }
