[package]
name = "htmxology-macros"
description = "Macros for the htmxology crate"
version = "0.2.0"
edition = "2021"
authors = ["Julien Kauffmann"]
repository = "https://github.com/ereOn/htmxology.rs"
license-file = "../LICENSE"
keywords = ["htmx", "ssr", "web", "html", "axum"]
categories = ["web-programming"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true
name = "htmxology_macros"

[dependencies]
convert_case.workspace = true
http.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
thiserror.workspace = true

[dev-dependencies]
regex.workspace = true
