[package]
name = "htmxology-macros"
description = "Macros for the htmxology crate"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
keywords = ["htmx", "ssr", "web", "html", "axum"]
categories = ["web-programming"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true
name = "htmxology_macros"

[dependencies]
convert_case.workspace = true
http.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
thiserror.workspace = true

[dev-dependencies]
regex.workspace = true
insta.workspace = true
prettyplease.workspace = true
syn = { workspace = true, features = ["extra-traits"] }
