[package]
name = "htmxology"
description = "HTMX server-side rendering framework for Rust, based on Axum."
version = "0.5.0"
edition = "2024"
authors = ["Julien Kauffmann"]
repository = "https://github.com/ereOn/htmxology.rs"
license-file = "../LICENSE-MIT"
keywords = ["htmx", "ssr", "web", "html", "axum"]
categories = ["web-programming"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
full = ["auto-reload", "interfaces", "ws", "derive", "templating"]
auto-reload = ["dep:listenfd", "tokio/net"]
interfaces = ["dep:netdev"]
ws = ["axum/ws", "dep:uuid"]
derive = ["dep:htmxology-macros", "dep:serde_urlencoded", "dep:regex"]
templating = ["dep:askama"]
examples = ["tokio/full", "dep:tracing-subscriber", "dep:anyhow", "axum/macros", "dep:askama"]

[lib]
name = "htmxology"

[[example]]
name = "blocks"
path = "../examples/blocks.rs"
required-features = ["auto-reload", "interfaces", "examples"]

[dependencies]
htmxology-macros = { workspace = true, optional = true }

anyhow = { workspace = true, optional = true }
axum.workspace = true
askama = { workspace = true, optional = true }
hex.workspace = true
md-5.workspace = true
listenfd = { workspace = true, optional = true }
http.workspace = true
netdev = { workspace = true, optional = true }
percent-encoding.workspace = true
regex = { workspace = true, optional = true }
serde.workspace = true
serde_urlencoded = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
