[package]
name = "htmxology"
description = "HTMX server-side rendering framework for Rust, based on Axum."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
keywords = ["htmx", "ssr", "web", "html", "axum"]
categories = ["web-programming"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
full = ["auto-reload", "interfaces", "ws", "derive", "templating"]
auto-reload = ["dep:listenfd", "tokio/net"]
interfaces = ["dep:netdev"]
ws = ["axum/ws", "dep:uuid"]
derive = ["dep:htmxology-macros", "dep:serde_urlencoded", "dep:regex"]
templating = ["dep:askama"]
examples = ["tokio/full", "dep:tracing-subscriber", "dep:anyhow", "axum/macros", "dep:axum-extra", "dep:askama"]

[lib]
name = "htmxology"

[[example]]
name = "blocks"
path = "../examples/blocks.rs"
required-features = ["auto-reload", "interfaces", "examples"]

[[example]]
name = "web-components"
path = "../examples/web-components.rs"
required-features = ["auto-reload", "interfaces", "examples"]

[dependencies]
htmxology-macros = { workspace = true, optional = true }

anyhow = { workspace = true, optional = true }
axum.workspace = true
axum-extra = { workspace = true, optional = true }
askama = { workspace = true, optional = true }
hex.workspace = true
md-5.workspace = true
listenfd = { workspace = true, optional = true }
http.workspace = true
netdev = { workspace = true, optional = true }
percent-encoding.workspace = true
regex = { workspace = true, optional = true }
serde.workspace = true
serde_urlencoded = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
